--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@fortawesome/react-fontawesome": "^0.1.17",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "@fortawesome/react-fontawesome": "^0.1.17",
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.4.4",
     "@mui/styles": "^5.4.4",
@@ -17,6 +17,7 @@
     "axios": "^0.26.0",
     "mui": "^0.0.1",
     "react": "^17.0.2",
+    "react-card-flip": "^1.1.5",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
