--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "mdbreact": "^5.2.0",
     "mui": "^0.0.1",
     "react": "^17.0.2",
     "react-card-flip": "^1.1.5",
