--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@fortawesome/react-fontawesome": "^0.1.17",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.4.4",
@@ -15,6 +16,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "dotenv": "^16.0.0",
     "mdbreact": "^5.2.0",
     "mui": "^0.0.1",
     "react": "^17.0.2",
