--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "reactjs-popup": "^2.0.5",
     "sweetalert2": "^11.4.4",
     "web-vitals": "^2.1.4"
   },
