--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "react": "^17.0.2",
     "react-card-flip": "^1.1.5",
     "react-dom": "^17.0.2",
+    "react-map-gl": "^6.0.10",
+    "react-map-gl-geocoder": "^2.2.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "reactjs-popup": "^2.0.5",
