--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-map-gl-geocoder": "^2.2.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-to-print": "^2.14.6",
     "reactjs-popup": "^2.0.5",
     "sweetalert2": "^11.4.4",
     "web-vitals": "^2.1.4"
