--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
     "dotenv": "^16.0.0",
+    "mapbox-gl": "^2.8.2",
+    "mapbox-gl-geocoder": "^2.0.1",
     "mdbreact": "^5.2.0",
     "mui": "^0.0.1",
     "react": "^17.0.2",
@@ -29,7 +31,8 @@
     "react-to-print": "^2.14.6",
     "reactjs-popup": "^2.0.5",
     "sweetalert2": "^11.4.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "worker-loader": "^3.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
